--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZILLEX Portfolio</title>
-    <meta name="description" content="The Work of ZILLEX - Creative Portfolio" />
+    <title>Zillex's Portfolio</title>
+    <meta name="description" content="The Work of ZILLEX" />
     <meta name="author" content="ZILLEX" />
 
     <meta property="og:title" content="ZILLEX Portfolio" />
-    <meta property="og:description" content="The Work of ZILLEX - Creative Portfolio" />
+    <meta property="og:description" content="The Work of ZILLEX" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
